docs tabela comentario e ajustes
